--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,13 @@
 
 <div class="container-fluid">
   <!-- Choose file from robot -->
+  <div class="row mt-3" *ngIf="showBrushMapping">
+    <div class="col-12">
+      <app-brush-map-formula id="app-brush-map-formula"></app-brush-map-formula>
+    </div>
+  </div>
+
+  <!-- Choose file from robot -->
   <div class="row mt-3" *ngIf="showFileChooser">
     <div class="col-12">
       <app-choose-file-robot id="app-choose-file-robot"></app-choose-file-robot>
