--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -4,7 +4,7 @@
     class="close mb-3 rounded-0"
     aria-label="Close"
     mat-raised-button
-    matTooltip="Close settings"
+    matTooltip="Close brush mapping"
     matTooltipShowDelay="1000"
     matTooltipClass="primary-tooltip"
   >
@@ -43,6 +43,11 @@
           <option value="3">Red</option>
           <option value="4">Black</option>
         </select>
+      </div>
+      <div class="form-group d-md-inline-block d-block mr-2 mb-2">
+        <button class="btn btn-primary rounded-0 d-inline-block">
+          Load file
+        </button>
       </div>
       <!--
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
