--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -19,33 +19,33 @@
         <label for="brushDeviceSelect">Brush device</label>
         <select id="brushDeviceSelect" class="custom-select rounded-0" disabled>
           <!-- *ngFor loop here -->
-          <option value="1" selected>A1Brush</option>
+          <option value="A1Brush" selected>A1Brush</option>
         </select>
       </div>
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
         <label for="programSelect">Program</label>
         <select id="programSelect" class="custom-select rounded-0">
           <option value="0" selected>None</option>
-          <!-- *ngFor loop here -->
-          <option value="1">Tesla Model S</option>
-          <option value="2">Tesla Model 3</option>
-          <option value="3">Tesla Model X</option>
-          <option value="4">Tesla Model Y</option>
-        </select>
+          <option *ngFor="let program of programArray" value="{{program}}">{{program}}</option>
+          <option value="TeslaModel3">TeslaModelS (static)</option>
+          <option value="TeslaModel3">TeslaModel3 (static)</option>
+          <option value="TeslaModelX">TeslaModelX (static)</option>
+          <option value="TeslaModelY">TeslaModelY (static)</option>
+        </select> 
       </div>
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
         <label for="materialSelect">Material</label>
         <select id="materialSelect" class="custom-select rounded-0">
           <option value="0" selected>None</option>
-          <!-- *ngFor loop here -->
-          <option value="1">Silver</option>
-          <option value="2">Grey</option>
-          <option value="3">Red</option>
-          <option value="4">Black</option>
+          <option *ngFor="let material of materialArray" value="{{material}}">{{material}}</option>
+          <option value="Silver">Silver (static)</option>
+          <option value="Grey">Grey (static)</option>
+          <option value="Red">Red (static)</option>
+          <option value="Black">Black (static)</option>
         </select>
       </div>
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
-        <button class="btn btn-primary rounded-0 d-inline-block">
+        <button class="btn btn-primary rounded-0 d-inline-block" (click)="loadFile()">
           Load file
         </button>
       </div>
