--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -7,7 +7,7 @@
 
   <h5>Brush Mapping</h5>
   <div class="mr-1 d-md-inline-block d-block">
-    <form id="allSettings">
+    <form>
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
         <label for="brushDeviceSelect">Brush device</label>
         <select id="brushDeviceSelect" class="custom-select rounded-0" disabled>
@@ -33,21 +33,19 @@
           Load file
         </button>
       </div>
-      <!--
-      <div class="form-group d-md-inline-block d-block mr-2 mb-2">
-        <label for="tableNumberInput">Table number</label>
-        <input
-          type="text"
-          class="form-control rounded-0 d-inline-block"
-          id="tableNumberInput"
-          placeholder="Ex: 101"
-        />
-        
-        <button class="btn btn-primary mt-1 rounded-0 d-inline-block">
-          Go
-        </button>
+    </form>
+  </div>
+  <div class="d-block">
+    <form>
+      <label for="tableNumberInput">Table number</label>
+      <div class="input-group col-md-3 p-0">
+        <input type="text" class="form-control d-inline-block rounded-0" placeholder="Ex: 101" id="tableNumberInput">
+        <span class="input-group-btn">
+          <button class="btn btn-primary rounded-0 border ml-2" type="button" (click)="loadFileFromNumber()">
+            Load file
+          </button>
+        </span>
       </div>
-      -->
     </form>
   </div>
 </div>
