--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -6,14 +6,20 @@
   </button>
 
   <h5>Brush Mapping</h5>
+  <div>
+    <p class="mb-1 mr-1 d-inline-block">Device: <i>A1Brush</i>.</p><br class="d-sm-none">
+    <p class="mr-1 d-inline-block">Formula: <i>Program*100 + Material</i>.</p>
+  </div>
   <div class="mr-1 d-md-inline-block d-block">
     <form>
+      <!--
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
         <label for="brushDeviceSelect">Brush device</label>
         <select id="brushDeviceSelect" class="custom-select rounded-0" disabled>
           <option *ngFor="let brushDevice of brushDeviceArray" value="{{brushDevice}}">{{brushDevice}}</option>
         </select>
       </div>
+      -->
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
         <label for="programSelect">Program</label>
         <select id="programSelect" class="custom-select rounded-0">
@@ -38,7 +44,7 @@
   <div class="d-block">
     <form>
       <label for="tableNumberInput">Table number</label>
-      <div class="input-group col-md-3 p-0">
+      <div class="input-group col-md-4 col-lg-3 p-0">
         <input type="text" class="form-control d-inline-block rounded-0" placeholder="Ex: 101" id="tableNumberInput">
         <span class="input-group-btn">
           <button class="btn btn-primary rounded-0 border ml-2" type="button" (click)="loadFileFromNumber()">
