--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -100,6 +100,6 @@
     <p style="font-weight:bold">{{channelNames.ch1}}: {{channelMaxValues.ch1}}, {{channelNames.ch2}}: {{channelMaxValues.ch2}}, 
         {{channelNames.ch3}}: {{channelMaxValues.ch3}}, {{channelNames.ch4}}: {{channelMaxValues.ch4}}, {{channelNames.ch5}}: {{channelMaxValues.ch5}}</p>
     <p>Should the channels in the table be adjusted so that all values greater than the max values above is set equal to the max value?</p>
-    <button id="yes" (click)="adjustChannelsToMaxvalue()" class="btn btn-primary">Yes</button>
-    <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1">No</button>
+    <button id="yes" (click)="adjustChannelsToMaxvalue()" class="btn btn-primary rounded-0">Yes</button>
+    <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1 rounded-0">No</button>
 </div>
