--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -35,6 +35,13 @@
         </select>
       </div>
       <div class="form-group d-md-inline-block d-block mr-2 mb-2">
+        <label for="optionSelect">Option</label>
+        <select id="optionSelect" class="custom-select rounded-0">
+          <option value="0" selected>None</option>
+          <option *ngFor="let option of optionArray" value="{{option}}">{{option}}</option>
+        </select>
+      </div>
+      <div class="form-group d-md-inline-block d-block mr-2 mb-2">
         <button class="btn btn-primary rounded-0 d-inline-block" (click)="loadFile()">
           Load file
         </button>
