Added success msgs and updated default chnames

--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -35,7 +35,7 @@
             <div class="form-group">
                 <label for="resetChNames">Channel names</label>
                 <br>
-                <button id="resetChNames" class="btn btn-primary mt-1 rounded-0" (click)="resetChannelNames()" mat-raised-button matTooltip="Reset the channel names to default (Channel 1, Channel 2, etc.)" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
+                <button id="resetChNames" class="btn btn-primary mt-1 rounded-0" (click)="resetChannelNames()" mat-raised-button matTooltip="Reset the channel names to default (Atom, Fluid, Shape 1, Shape 2, High volt)" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
                     Reset to default
                 </button>
             </div>
