Add correct styling to channel select in settings

--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -8,7 +8,7 @@
         <form id="allSettings">
             <div class="form-group">
                 <label for="channelMaxvalue">Change max value for channel: </label>
-                <select id="channelChosen" (change)="addChoices(); showMaxValue()" class="form-control">
+                <select id="channelChosen" (change)="addChoices(); showMaxValue()" class="custom-select rounded-0">
                     <option disabled selected value> -- Select a channel -- </option>
                     <option value="ch1">{{channelNames.ch1}}</option>
                     <option value="ch2">{{channelNames.ch2}}</option>
