--- a/src/app/brush-table/brush-table.component.scss
+++ b/src/app/brush-table/brush-table.component.scss
@@ -42,6 +42,9 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+input[type=number] {
+    -moz-appearance:textfield;
+}
 /* Keeps input background white when autofilling values */
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
