--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -3,7 +3,7 @@
     matTooltip="Close brush mapping" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip"
     (click)="toggleBrushMapping()">
     <span aria-hidden="true">&times;</span>
-  </button>
+  </button><!--Remove mb-3 from button-->
 
   <h5>Brush Mapping</h5>
   <div>
@@ -20,7 +20,7 @@
         </select>
       </div>
       -->
-      <div class="form-group d-md-inline-block d-block mr-2 mb-2">
+      <div class="form-group d-md-inline-block d-block mr-2 mb-2"> <!-- remove d-md-inline-block d-block from all elements-->
         <label for="programSelect">Program</label>
         <select id="programSelect" class="custom-select rounded-0">
           <option value="0" selected>None</option>
