--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div class="row align-items-center mb-2">
+  <div class="row align-items-top mb-2">
     <!-- Table -->
     <div class="col-12 col-sm-12 col-lg-8 mt-3">
       <app-brush-table id="app-table"></app-brush-table>
