--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
             <li class="nav-item" (click)="toggleBrushMapping()">
                 <a class="nav-link d-lg-none text-white" href="#" mat-raised-button matTooltip="Show/hide brush mapping"
                     matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
-                    <span data-toggle="collapse" data-target=".navbar-collapse.show">Brush map formula</span>
+                    <span data-toggle="collapse" data-target=".navbar-collapse.show">Brush mapping</span>
                     <!-- Navbar collapsed: Text only -->
                 </a>
                 <a class="nav-link pt-0 pb-0 d-none d-lg-block ml-2" href="#" mat-raised-button
